2006-09-12  Bastien Nocera  <hadess@hadess.net>

	* data/totem-ui.xml: add missing file, thanks Tim

2006-09-11  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata):
	* src/backend/bacon-video-widget-xine.c:
	* src/backend/bacon-video-widget.h:
	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_reset),
	(bacon_video_widget_properties_update):
	Add support for the audio sample rate, and audio
	channels to the properties widget (Closes: #332831)

2006-09-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key_press),
	(on_window_key_press_event): handle the Apple remote's
	"Menu" button, when playing a DVD (Helps: #355474)

2006-09-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* data/popup.glade:
	* data/totem.glade:
	* src/Makefile.am:
	* src/egg-recent-item.c:
	* src/egg-recent-item.h:
	* src/egg-recent-model.c:
	* src/egg-recent-model.h:
	* src/egg-recent-util.c:
	* src/egg-recent-util.h:
	* src/egg-recent-view-gtk.c:
	* src/egg-recent-view-gtk.h:
	* src/egg-recent-view.c:
	* src/egg-recent-view.h:
	* src/totem-menu.c: (subtitles_changed_callback),
	(languages_changed_callback), (add_lang_action),
	(create_lang_actions), (totem_languages_update),
	(totem_subtitles_update), (on_recent_file_item_activated),
	(totem_compare_recent_items),
	(totem_recent_manager_changed_callback), (totem_setup_recent),
	(totem_action_add_recent), (on_play_disc_activate),
	(add_device_to_menu), (on_movie_menu_select),
	(totem_setup_play_disc), (open_action_callback),
	(open_location_action_callback), (eject_action_callback),
	(play_action_callback), (quit_action_callback),
	(take_screenshot_action_callback), (preferences_action_callback),
	(fullscreen_action_callback), (zoom_1_2_action_callback),